# HiveWE

./: .gitignore  CMakeLists.txt  README.md  REQUIREMENTS.txt  check_hivewe_release.bat
data/: wc3_name_fallback.tsv
data/tools/: wc3_lua_api.json
docs/: cli-wrapper-plan.md
scripts/: check_hivewe_release.ps1  package_release.py
src/: CMakeLists.txt  gl_globals.ixx  globals.ixx  main.cpp
src/asset_manager/: asset_manager.cpp  asset_manager.h
src/base/: doodads.ixx  game_cameras.ixx  hierarchy.ixx  map_info.ixx  object_data.ixx  pathing_analysis.ixx  pathing_map.ixx  placed_units.ixx  race_graph.ixx  regions.ixx  safe_move.ixx  shadow_map.ixx  sounds.ixx  terrain.ixx  trigger_strings.ixx  units.ixx
src/base/map/: map.ixx
src/base/triggers/: map_script.cpp  triggers.ixx
src/brush/: brush.cpp  doodad_brush.cpp  unit_brush.cpp
src/cli/: main_cli.cpp  object_data_cli.cpp
src/custom_widgets/: unit_selector.ixx
src/file_formats/: casc.ixx  ini.ixx  slk.ixx
src/main_window/: glwidget.cpp  hivewe.cpp  hivewe.h  main_ribbon.cpp  main_ribbon.h  warcraft_selection.cpp  warcraft_selection.h
src/menus/: region_palette.cpp  region_palette.h  settings_editor.cpp  settings_editor.ui
src/model_editor/: model_editor.cpp
src/models/: single_model.cpp  single_model.h  table_model.ixx
src/models/list/: unit_list_model.ixx
src/models/tree/: ability_tree_model.ixx  base_tree_model.ixx  buff_tree_model.ixx  destructible_tree_model.ixx  doodad_tree_model.ixx  item_tree_model.ixx  unit_tree_model.ixx  upgrade_tree_model.ixx
src/object_editor/: icon_view.cpp  object_editor.cpp  object_editor.h  object_merge_dialog.h  spreadsheet_editor.cpp  spreadsheet_editor.h  techtree_viewer.cpp  techtree_viewer.h
src/resources/: cliff_mesh.ixx  pathing_texture.ixx  qicon_resource.ixx  skinned_mesh.ixx
src/trigger_editor/: lua_editor.cpp  lua_editor.h  lua_explorer.cpp  lua_explorer.h  trigger_editor.cpp  trigger_editor.h  trigger_editor.ui
src/utilities/: modification_tables.ixx  opengl_utilities.ixx  utilities.ixx
tests/: CMakeLists.txt  object_merge_test.cpp  spreadsheet_proxy_test.cpp
